index 수정 main.css 추가

--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
 </head>
 <body>
     hello there
+    <li>
+        <ul>사과</ul>
+        <ul>나무</ul>
+        <ul>포도</ul>
+        <ul>바나나</ul>
+        <ul>베리</ul>
+        <ul>나무</ul>
+        <ul>포도</ul>
+        <ul>바나나</ul>
+        <ul>베리</ul>
+
+    </li>
 </body>
 </html>
